bindings/ocaml/include/liblevenshtein.h


LLEV_API const char* llev_last_error_message(void);
LLEV_API size_t llev_distance(const char* source, size_t source_len,
                              const char* target, size_t target_len);
LLEV_API size_t llev_distance_threshold(const char* source, size_t source_len,
                                        const char* target, size_t target_len,
                                        size_t threshold);
LLEV_API size_t llev_damerau_distance(const char* source, size_t source_len,
                                      const char* target, size_t target_len);
LLEV_API size_t llev_damerau_distance_threshold(const char* source,
                                                size_t source_len,
                                                const char* target,
                                                size_t target_len,
                                                size_t threshold);
LLEV_API size_t llev_true_damerau_distance(const char* source,
                                           size_t source_len,
                                           const char* target,
                                           size_t target_len);
LLEV_API size_t llev_true_damerau_distance_threshold(const char* source,
                                                     size_t source_len,
                                                     const char* target,
                                                     size_t target_len,
                                                     size_t threshold);
LLEV_API LlevStatus llev_transducer_new(const VtResource* dictionary,
                                        uint32_t algorithm,
                                        LlevTransducer** out_transducer);
LLEV_API void llev_transducer_free(LlevTransducer* transducer);
LLEV_API LlevStatus llev_query_cache_new(
    const LlevTransducer* transducer,
    size_t max_entries_per_order,
    size_t max_weight_per_order,
    LlevQueryCache** out_cache);
LLEV_API LlevStatus llev_query_cache_clear(LlevQueryCache* cache);
LLEV_API LlevStatus llev_query_cache_reset_stats(LlevQueryCache* cache);
LLEV_API LlevStatus llev_query_cache_stats(
    const LlevQueryCache* cache,
    LlevQueryCacheStats* out_stats);
LLEV_API void llev_query_cache_free(LlevQueryCache* cache);
LLEV_API LlevStatus llev_transducer_query_utf8(
    const LlevTransducer* transducer,
    const char* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_transducer_query_bytes(
    const LlevTransducer* transducer,
    const uint8_t* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_transducer_query_u64(
    const LlevTransducer* transducer,
    const uint64_t* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_query_cache_query_utf8(
    LlevQueryCache* cache,
    const char* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_query_cache_query_bytes(
    LlevQueryCache* cache,
    const uint8_t* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_query_cache_query_u64(
    LlevQueryCache* cache,
    const uint64_t* query,
    size_t query_len,
    size_t max_distance,
    uint32_t order,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_query_cursor_next_batch(
    LlevQueryCursor* cursor,
    size_t max_matches,
    LlevMatchBatchView* out_batch);
LLEV_API LlevStatus llev_query_cursor_release_batch(
    LlevQueryCursor* cursor,
    uint64_t generation);
LLEV_API LlevStatus llev_query_cursor_free(LlevQueryCursor* cursor);
LLEV_API LlevStatus llev_phonetic_pattern_compile_regex(
    const char* source, size_t source_len, LlevPhoneticPattern** out_pattern);
LLEV_API LlevStatus llev_phonetic_pattern_compile_llre(
    const char* source, size_t source_len, LlevPhoneticPattern** out_pattern);
LLEV_API void llev_phonetic_pattern_free(LlevPhoneticPattern* pattern);
LLEV_API LlevStatus llev_phonetic_pattern_size(
    const LlevPhoneticPattern* pattern,
    size_t* out_states,
    size_t* out_transitions);
LLEV_API LlevStatus llev_phonetic_pattern_matches(
    const LlevPhoneticPattern* pattern,
    const char* input,
    size_t input_len,
    uint8_t* out_matches);
LLEV_API LlevStatus llev_transducer_query_pattern(
    const LlevTransducer* transducer,
    const LlevPhoneticPattern* pattern,
    uint8_t max_distance,
    LlevQueryCursor** out_cursor);
LLEV_API LlevStatus llev_phonetic_rules_parse(
    const char* source, size_t source_len, LlevPhoneticRuleSet** out_rules);
LLEV_API LlevStatus llev_phonetic_rules_builtin(
    uint32_t kind, LlevPhoneticRuleSet** out_rules);
LLEV_API void llev_phonetic_rules_free(LlevPhoneticRuleSet* rules);
LLEV_API LlevStatus llev_phonetic_rules_len(
    const LlevPhoneticRuleSet* rules, size_t* out_len);
LLEV_API LlevStatus llev_phonetic_rules_apply(
    const LlevPhoneticRuleSet* rules,
    const char* input,
    size_t input_len,
    LlevOwnedString* out_text);
LLEV_API void llev_owned_string_free(LlevOwnedString* value);